<resources>
    <string name="app_name">Spero</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="jsports_login">Spero - Login</string>
    <string name="jsports_register">Spero - Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="username_required">Username required</string>
    <string name="username_short">Username has to be at least 6 characters</string>
    <string name="username_long">Username has to be less than 30 characters long</string>
    <string name="password_short">Password has to be at least 6 characters</string>
    <string name="password_long">Password has to be less than 30 characters long</string>
    <string name="username_wrong">Wrong username!</string>
    <string name="password_required">Password required</string>
    <string name="email">Email</string>
    <string name="wrong_email">Wrong email</string>
    <string name="email_required">Email required</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm password</string>
    <string name="country">Country</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="ful_name_required">Name required</string>
    <string name="full_name_long">Full name is too long</string>
    <string name="full_name_short">Full name is too short</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="country_not_found">Country is not found</string>
    <string name="height_large">Height is too big</string>
    <string name="height_small">Height is too small</string>
    <string name="weight_large">Weight is too big</string>
    <string name="weight_small">Weight is too small</string>
    <string name="date_format_wrong">Wrong date format</string>
    <string name="age_small">The age is to small</string>
    <string name="age_big">The age is to big</string>
    <string name="language">Language</string>
    <string name="first_name">Name</string>
    <string name="second_name">Surname</string>
    <string name="date_format_hint">yyyy.mm.dd</string>
    <string name="name_required">Name is required</string>
    <string name="surname_required">Surname is required</string>
    <string name="name_long">Name is too long</string>
    <string name="username_empty">Username is empty</string>
    <string name="email_wrong">Email has wrong format</string>
    <string name="date_small">Age is too small</string>
    <string name="date_large">Age is too large</string>
    <string name="pick_date">Pick your date of birth</string>
    <string name="have_account">Have an account? </string>
    <string name="submit_reg">Register</string>
    <string name="login_reg">Login</string>
    <string name="home">Home</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="account">Account</string>
    <string name="spero_home">Home</string>
    <string name="email_">Email:</string>
    <string name="birthday_">Birthday:</string>
    <string name="height_">Height:</string>
    <string name="sm">sm</string>
    <string name="kg">kg</string>
    <string name="weight_">Weight:</string>
    <string name="fullname" translatable="false">%1s %2s</string>
    <string name="username_templ" translatable="false">\@%1s</string>
    <string name="result">Result:</string>
    <string name="norm">Normal chance:</string>
    <string name="murm">Murmurs chance:</string>
    <string name="extr">"Extrasystoles chance: "</string>
    <string name="date">Diagnostics date:</string>
    <string name="normal">Normal</string>
    <string name="murmur">Murmur</string>
    <string name="extrahls">Extrasystoles</string>
    <string name="logout">Logout</string>
    <string name="edit_your_data">Edit your data&#8230;</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_">Name:</string>
    <string name="surname_">Surname:</string>
    <string name="username_">Username:</string>
    <string name="image_not_picked">You have not picked image!</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="play_heartbeat">Play heartbeat</string>
    <string name="play_result">Play result</string>
    <string name="connect_to_speroscope">Connect to SperoScope</string>
    <string name="spero_profile">Profile</string>
    <string name="spero_diagnosis">Diagnosis</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
</resources>
